# rust-hexagonal-architecture

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20210822144504_create_table_account.sql  20210822144746_create_table_activity.sql
src/: lib.rs
src/adapter/input/rest/: api.rs  mod.rs
src/adapter/output/: account_repository.rs  mod.rs
src/adapter/output/entity/: account.rs  activity.rs  mod.rs  prelude.rs
src/application/: mod.rs  send_money_service.rs
src/application/port/input/: mod.rs  send_money_usecase.rs
src/application/port/output/: load_account_port.rs  mod.rs  update_account_state_port.rs
src/domain/: account.rs  activity.rs  mod.rs  money.rs
src/infrastructure/: container.rs  db.rs  mod.rs  tests.rs
tests/sql/: account_repository_test.sql
